fixing some things

--- a/www/css/chat.css
+++ b/www/css/chat.css
@@ -30,7 +30,7 @@ h1 {
 }
 .conversation {
     background-color: #efefef;
-    padding: 10px 10px 0;
+    padding: 10px 10px 10px;
     min-height: 369px;
     max-width: 100%;
 }
